Troca de credenciais BD

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -60,4 +60,8 @@
     <div class="div-Copyright">
         <p>TopSalaes6 © Copyright 2022 - Todos os direitos reservados.</p>
     </div>
-</footer>    
+</footer>
+
+<!-- Scripts-->
+    <script type="text/javascript" src="/js/menu-mobile.js"></script>
+<!--********-->
