--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -45,11 +45,12 @@ body {
 /* Header */
 header {
     position: fixed;
+    top: 0;
     border-bottom: 5px solid #FF914D;    
     box-shadow: 0 0 1em #999;
     width: 100%;
     background-color: #fff;
-    z-index: 15;     
+    z-index: 1001;     
 }
 
 header .container nav {
@@ -85,6 +86,50 @@ header .container nav .div-menu-1 div .btn-hamburger-mobile span {
     font-weight: bold;
     cursor: pointer;
 }
+
+/* Menu mobile */
+    header .container nav .div-menu-1 div .lista-nav-menu-mobile {
+        position: absolute;
+        display: block;        
+        width: 112%;
+        left: -15px;
+        top: 105px;               
+        height: 0px;
+        list-style: none;        
+        background-color: #fff;
+        z-index: 1005;        
+        visibility: hidden;
+        overflow-y: hidden;        
+        transition: 0.5s;   
+    }
+
+    #nav-header.active .lista-nav-menu-mobile {        
+        height: calc(100vh - 105px);  
+        visibility: visible;
+        overflow-y: auto;
+    }
+
+    header .container nav .div-menu-1 div .btn-hamburger-mobile .span-btn-close {        
+        display: none;
+    }
+
+    header .container nav .div-menu-1 div .lista-nav-menu-mobile li a {  
+        display: block;
+        width: 100%;         
+        padding: 20px 20px 20px 20px;         
+        border-bottom: 1px solid #eee;    
+        text-decoration: none;
+        color: #777;
+        font-weight: bold;        
+        transition: 0.3s;
+    }
+    header .container nav .div-menu-1 div .lista-nav-menu-mobile li a:hover {
+        /*background-color: #333;*/
+    }
+
+/***************/
+
+
 
 header .container nav .div-menu-1 div .link-logo-empresa {
     display: none;
@@ -445,6 +490,10 @@ header .container nav .div-menu-2 .div-barra-pesquisa form .icon-lupa {
     
     header .container nav .div-menu-1 div .link-logo-empresa {
         display: block;
+    }
+
+    header .container nav .div-menu-1 div .lista-nav-menu-mobile {
+        display: none;
     }
 
     header .container nav .div-menu-1 div .link-logo-empresa img{
