--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,25 +10,39 @@
 
                     <ul class="lista-nav-menu-mobile" role="menu">
                         <li>
-                            <a id="link-mobile-home" href="/">
+                            <a id="" href="/">
                                 <span class="material-icons-outlined">home</span>
                                 Home
                             </a>
                         </li>
                         <li>
-                            <a id="link-mobile-experiencia" href="/usuarios/login">
+                            <a id="" href="/usuarios/login">
                                 <span class="material-icons-outlined">person</span>
                                 Minha conta
                             </a>
                         </li>                        
                         <li>
-                            <a id="link-mobile-conhecimentos" href="#">
+                            <a id="" href="#">
                                 <span class="material-icons-outlined">headset_mic</span>
                                 Central de Atendimento
                             </a>
                         </li>                        
-                        <!--li><a id="link-mobile-social" href="#social">SOCIAL</a></li>                        
-                        <li><a href="#">CONTATO</a></li-->
+                        <li id="li-sub-menu-mobile" class="li-departamentos" aria-expanded="false" aria-controls="lista-nav-sub-menu-mibile" aria-haspopup="true" aria-label="Abrir menu.">
+                            <a id="sub-btn-mobile-departamentos" class="link-expandir-departamentos" href="#">
+                                <div>
+                                    <span class="material-icons-outlined">category</span>
+                                    Departamentos
+                                </div>
+                                <span class="material-icons-outlined span-departamentos-seta-baixo">expand_more</span>
+                                <span class="material-icons-outlined span-departamentos-seta-cima">expand_less</span>
+                            </a>
+
+                            <ul class="submenu-departamentos-mobile">
+                                <li><a href="#">PC Gamer</a></li>   
+                                <li><a href="#">Hardware</a></li>    
+                                <li><a href="#">Smartphone</a></li>                               
+                            </ul>
+                        </li>
                     </ul>
 
                     <a href="/" class="link-logo-empresa"><img src="/images/logo.svg" alt="Imagem Logo TopSales6"></a>
@@ -40,7 +54,7 @@
                         </li>
                         <li>
                             <a href="#"><span class="material-icons-outlined">headset_mic</span>Central de Atendimento</a>
-                        </li>                            
+                        </li>                                                   
                     </ul>
                 </div>
 
@@ -58,20 +72,20 @@
                         <ul class="submenu-departamentos">
                             <li class="submenu-departamentos-li-pc-gamer">
                                 <a href="#">PC Gamer</a>
-                                <span class="material-icons-outlined">navigate_next</span>
+                                <!--span class="material-icons-outlined">navigate_next</span>
                                 <ul class="submenu-pc-gamer">
                                     <li><a href="#">Fast White</a></li>
                                     <li><a href="#">Red Force</a></li>
-                                </ul>
+                                </ul-->
                             </li>
 
                             <li class="submenu-departamentos-li-hardware">
                                 <a href="#">Hardware</a>
-                                <span class="material-icons-outlined">navigate_next</span>
+                                <!--span class="material-icons-outlined">navigate_next</span>
                                 <ul class="submenu-hardware">
                                     <li><a href="#">Pl-Vídeo</a></li>
                                     <li><a href="#">Processador</a></li>
-                                </ul>
+                                </ul-->
                             </li>
 
                             <li><a href="#">Smartphone</a></li>
