--- a/public/stylesheets/cards.css
+++ b/public/stylesheets/cards.css
@@ -46,6 +46,11 @@
     width: 80px;
 }
 
+.div-cards-principal .div-cards .card .div-card-img-infos .card-infos
+{
+    text-decoration: none;
+}
+
 .div-cards-principal .div-cards .card .div-card-img-infos .card-infos .card-nome-produto {
     font-size: 0.831rem;
     font-weight: 600;
@@ -88,8 +93,21 @@
     cursor: pointer;    
 }
 
+.btn_a
+{   
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    color: #fff;
+    padding: 3%;
+    padding-left: 25%;
+    padding-right: 25%;
+}
+
 .div-cards-principal .div-cards .card button span{
     margin-right: 5px;
+    
 }
 
 /******************* @media ****************************/
