--- a/views/index.ejs
+++ b/views/index.ejs
@@ -59,17 +59,34 @@
                             <article class="card">
                                 <div class="div-card-img-infos">
                                     <figure>
-                                        <img src="/images/produtos/<%= produtos[i].img %> " alt="Imagem PC Gamer">
+
+                                        <a href="/produto">
+                                            <img src="/images/produtos/<%= produtos[i].img %> " alt="Imagem PC Gamer">
+                                        </a>
+
+                                        
                                     </figure>
-                                    <div class="card-infos">
-                                        <p class="card-nome-produto"><%= produtos[i].nome %></p>
-                                        <p class="card-preco-anterior">De: R$<%= produtos[i].preco %> por:</p>
-                                        <p class="card-preco-atual"><strong>R$<%= ((produtos[i].preco / 10 ) * 9).toFixed(2) %> à vista</strong></p>
-                                        <p class="card-preco-parcelado">12x de R$<%= (produtos[i].preco / 12).toFixed(2) %></p>
-                                    </div>                                
+
+                                    <a href="/produto" class="card-infos">
+
+                                        <div class="card-infos">
+                                            <p class="card-nome-produto"><%= produtos[i].nome %></p>
+                                            <p class="card-preco-anterior">De: R$<%= produtos[i].preco %> por:</p>
+                                            <p class="card-preco-atual"><strong>R$<%= ((produtos[i].preco / 10 ) * 9).toFixed(2) %> à vista</strong></p>
+                                            <p class="card-preco-parcelado">12x de R$<%= (produtos[i].preco / 12).toFixed(2) %></p>
+                                        </div>  
+
+                                    </a>
+
+                              
                                 </div>
                                 <button>
-                                    <span class="material-icons-outlined">shopping_cart</span> Comprar
+
+                                    <a class="btn_a" href="/carrinho">
+                                        <span class="material-icons-outlined">shopping_cart</span> Comprar
+                                    </a>
+
+
                                 </button>
                             </article>
 
@@ -91,18 +108,34 @@
                             <article class="card">
                                 <div class="div-card-img-infos">
                                     <figure>
-                                        <img src="/images/produtos/<%= produtos[i].img %> " alt="Imagem PC Gamer">
+                                        
+                                        <a href="/produto">
+                                            <img src="/images/produtos/<%= produtos[i].img %> " alt="Imagem PC Gamer">
+                                        </a>
+                                        
+                                        
                                     </figure>
                                     <div class="card-infos">
-                                        <p class="card-nome-produto"><%= produtos[i].nome %></p>
-                                        <p class="card-preco-anterior">De: R$<%= produtos[i].preco %> por:</p>
-                                        <p class="card-preco-atual"><strong>R$<%= ((produtos[i].preco / 10 ) * 9).toFixed(2) %> à vista</strong></p>
-                                        <p class="card-preco-parcelado">12x de R$<%= (produtos[i].preco / 12).toFixed(2) %></p>
-                                    </div>                                
+
+                                        <a href="/produto" class="card-infos">
+                                            <p class="card-nome-produto"><%= produtos[i].nome %></p>
+                                            <p class="card-preco-anterior">De: R$<%= produtos[i].preco %> por:</p>
+                                            <p class="card-preco-atual"><strong>R$<%= ((produtos[i].preco / 10 ) * 9).toFixed(2) %> à vista</strong></p>
+                                            <p class="card-preco-parcelado">12x de R$<%= (produtos[i].preco / 12).toFixed(2) %></p>    
+                                        </a>
+
+                                       </div>                                
                                 </div>
-                                <button>
-                                    <span class="material-icons-outlined">shopping_cart</span> Comprar
+
+                                <button class="btn_div">
+
+                                    <a class="btn_a" href="/carrinho">
+                                        <span class="material-icons-outlined">shopping_cart</span> Comprar
+                                    </a>
+
                                 </button>
+
+
                             </article>
     
                         <% } %>
