Adição das categorias/departamentos no menu nav.

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -39,8 +39,11 @@
 
                             <ul class="submenu-departamentos-mobile">
                                 <li><a href="#">PC Gamer</a></li>   
+                                <li><a href="#">Desktop</a></li>   
+                                <li><a href="#">Notebook</a></li>   
                                 <li><a href="#">Hardware</a></li>    
                                 <li><a href="#">Smartphone</a></li>                               
+                                <li><a href="#">Tablet</a></li>                               
                             </ul>
                         </li>
                     </ul>
@@ -79,6 +82,9 @@
                                 </ul-->
                             </li>
 
+                            <li><a href="#">Desktop</a></li>   
+                            <li><a href="#">Notebook</a></li>
+
                             <li class="submenu-departamentos-li-hardware">
                                 <a href="#">Hardware</a>
                                 <!--span class="material-icons-outlined">navigate_next</span>
@@ -87,6 +93,8 @@
                                     <li><a href="#">Processador</a></li>
                                 </ul-->
                             </li>
+
+                            <li><a href="#">Tablet</a></li>
 
                             <li><a href="#">Smartphone</a></li>
                         </ul>
