--- a/public/stylesheets/cards.css
+++ b/public/stylesheets/cards.css
@@ -14,7 +14,7 @@
     margin-bottom: 0px;           
 }
 
-.div-cards-principal .div-cards .div-card-img-infos {
+.div-cards-principal .div-cards  .div-card-img-infos {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -27,7 +27,8 @@
     padding: 20px;
     border-radius: 7px;
     box-shadow: 3px 2px 10px 4px #888;
-    transition: 0.3s;    
+    transition: 0.3s; 
+    cursor: pointer;   
 }
 
 .div-cards-principal .div-cards .card:hover {
