--- a/views/meus-dados.ejs
+++ b/views/meus-dados.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TopSales6</title>
-    <link rel="shortcut icon" href="./img/fivicon.ico">
+    <link rel="shortcut icon" href="/images/fivicon.ico">
     <!--Fonte / Icons-->    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>   
@@ -28,7 +28,9 @@
             <div class="div-main-config-padrao">
                 <!--Comece aqui!-->
                 <div class="div-area-restrita">
-    <%- include('./partials/menu-lateral-perfil') %>
+
+                    <%- include('./partials/menu-lateral-perfil') %>
+                    
                     <div class="div-info-usuario-principal">
                         <p class="titulo-meus-dados">
                             <span class="material-icons">article</span> MEUS DADOS
