--- a/views/perfil.ejs
+++ b/views/perfil.ejs
@@ -31,11 +31,18 @@
                     <%- include('./partials/menu-lateral-perfil') %>
                     <div class="div-info-usuario-principal">
                         <div class="div-info-acesso">
-                            <div class="div-info-acesso-texto">
-                                <p class="saudacao">Bem-Vindo,</p>
-                                <p class="nome-usuario">Fernando Ferreira Mendonça</p>
-                                <p class="email-usuario">fernandofm3@gmail.com</p>
+                            <div class="div-info-avatar">
+
+                                <img src="/images/avatares/default.jpeg" alt="Foto do avatar." class="foto-avatar">
+
+                                <div class="div-info-acesso-texto">
+                                    <p class="saudacao">Bem-Vindo,</p>
+                                    <p class="nome-usuario">Fernando Ferreira Mendonça</p>
+                                    <p class="email-usuario">fernandofm3@gmail.com</p>
+                                </div>
                             </div>
+
+                            
                             <a class="btn-alterar-senha" href="">
                                 <span class="material-icons">lock</span> ALTERAR SENHA
                             </a>
