--- a/public/stylesheets/perfil-usuario.css
+++ b/public/stylesheets/perfil-usuario.css
@@ -21,7 +21,8 @@
 
 .div-area-restrita .div-info-usuario-principal .div-info-acesso .div-info-avatar .foto-avatar{
     width: 90px;
-    margin-right: 15px;   
+    margin-right: 15px;
+    border-radius: 7px;       
 }
 
 .div-area-restrita .div-info-usuario-principal .div-info-acesso .div-info-acesso-texto p{
