--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,7 +16,7 @@
                             </a>
                         </li>
                         <li>
-                            <a id="" href="/usuarios/login">
+                            <a id="" href="/usuario/login">
                                 <span class="material-icons-outlined">person</span>
                                 Minha conta
                             </a>
@@ -53,7 +53,7 @@
                     
                     <ul class="lista-menu">
                         <li>
-                            <a href="/usuarios/login"><span class="material-icons">account_circle</span>Minha Conta</a>
+                            <a href="/usuario/login"><span class="material-icons">account_circle</span>Minha Conta</a>
                         </li>
                         <li>
                             <a href="#"><span class="material-icons-outlined">headset_mic</span>Central de Atendimento</a>
