--- a/views/partials/menu-lateral-perfil.ejs
+++ b/views/partials/menu-lateral-perfil.ejs
@@ -1,13 +1,13 @@
 <nav class="menu-lateral-area-restrita">                       
     <ul class="ul-menu-lateral">
         <li>
-            <a href="/usuarios/perfil">
+            <a href="/usuario/perfil">
                 <span class="material-icons">person</span>
                 Minha Conta
             </a>
         </li>
         <li>
-            <a href="/usuarios/meus-dados">
+            <a href="/usuario/meus-dados">
                 <span class="material-icons">article</span>
                 Meus Dados
             </a>
