--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -26,7 +26,7 @@
     <main class="main-cadastro">
         <div class="container">
             <div class="div-main-config-padrao">
-                <form action="/usuarios/cadastro" method="POST" enctype="multipart/form-data">  
+                <form action="/usuario/cadastro" method="POST" enctype="multipart/form-data">  
                     <h2>
                         <span class="material-icons-outlined">content_paste</span>    
                         CADASTRO
@@ -134,7 +134,7 @@
                     
                     <div class="div-form-botoes">
                         <button class="botao-cadastro" type="submit">CRIAR CONTA</button>
-                        <a class="botao-cadastro-voltar" href="/usuarios/login">Voltar</a>
+                        <a class="botao-cadastro-voltar" href="/usuario/login">Voltar</a>
                     </div>
                 </form>    
             </div>
