--- a/views/meus-dados.ejs
+++ b/views/meus-dados.ejs
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TopSales6</title>
-    <link rel="shortcut icon" href="./img/fivicon.ico">
+    <title>TopSales6</title>    
+    <link rel="shortcut icon" href="/images/fivicon.ico">
     <!--Fonte / Icons-->    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>   
@@ -35,8 +35,14 @@
                         </p>
                         <form action="#" metod="POST" class="form-meus-dados">
                             <div class="div-nome-completo">
-                                <label for="nome-completo">Nome Completo</label>
-                                <input id="nome-completo" name="nome-completo" type="text" placeholder="Digite seu nome completo" required>
+                                <div class="div-nome">
+                                    <label for="nome">Nome</label>
+                                    <input id="nome" name="nome" type="text" placeholder="Digite seu nome" required>
+                                </div>
+                                <div class="div-sobrenome">
+                                    <label for="sobrenome">Sobrenome</label>
+                                    <input id="sobrenome" name="sobrenome" type="text" placeholder="Digite seu sobrenome" required>
+                                </div>                                
                             </div>
                             <div class="div-cpf-rg-data-nasc">
                                 <div class="div-cpf">
