--- a/views/login.ejs
+++ b/views/login.ejs
@@ -39,6 +39,15 @@
 
                 <% } %>
 
+                <% if(locals.falhaLogin) { %>
+
+                    <p  class="infoFalhaCadastro">
+                        <%= locals.falhaLogin %>
+                        
+                    </p> 
+
+                <% } %>
+
 
 
 
