--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -52,9 +52,30 @@
                     <a href="/" class="link-logo-empresa-mobile"><img src="/images/logo2.svg" alt="Imagem Logo TopSales6"></a>
                     
                     <ul class="lista-menu">
-                        <li>
-                            <a href="/usuario/login"><span class="material-icons">account_circle</span>Minha Conta</a>
-                        </li>
+                        <% if(locals.usuarioEstaLogado == true) { %>
+
+                            <li>
+                                <a href="/usuario/login"><span class="material-icons">account_circle</span>Minha conta</a>
+                            </li>
+        
+                        <% }%>
+
+                        <% if(locals.usuarioEstaLogado == false) { %>
+
+                            <li>
+                                <a href="/usuario/login"><span class="material-icons">account_circle</span>Login</a>
+                            </li>
+        
+                        <% }%>
+
+                        <% if(locals.usuarioEstaLogado == true) { %>
+
+                            <li>
+                                <a href="/usuario/logout"><span class="material-icons">account_circle</span>sair</a>
+                            </li>
+        
+                        <% }%>
+
                         <li>
                             <a href="#"><span class="material-icons-outlined">headset_mic</span>Central de Atendimento</a>
                         </li>                                                   
