--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -64,4 +64,5 @@
 
 <!-- Scripts-->
     <script type="text/javascript" src="/js/menu-mobile.js"></script>
+    <script type="text/javascript" src="/js/efeito-navbar.js"></script>
 <!--********-->
