adição dos links dinamico entre os cards e a pagina de produtos

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -56,7 +56,7 @@
                         
                         <% for (let i=0; i<=11; i++) { %> 
 
-                            <article class="card" onclick="location.href='/produto';">
+                            <article class="card" onclick="location.href='/produto/<%=[i]%>';">
                                 <div class="div-card-img-infos">
                                     <figure>
 
@@ -107,7 +107,7 @@
 
                             
 
-                            <article class="card" onclick="location.href='/produto';">
+                            <article class="card" onclick="location.href='/produto/<%=[i]%>';">
                                 <div class="div-card-img-infos">
                                     <figure>
                                         
