Correção do tamanho da imagem na pagina de login dinamica

--- a/public/stylesheets/produto.css
+++ b/public/stylesheets/produto.css
@@ -23,8 +23,9 @@ main div div .home-produto {
     margin: 1%;
     justify-content: flex-start;
 }
-.paginaproduto div div section .img-nome-valor-comprar .main-img {
+.paginaproduto div div section .img-nome-valor-comprar .main-img img{
     margin: 1%;
+    width: 40%;
 }
 
 
