--- a/views/produto.ejs
+++ b/views/produto.ejs
@@ -43,7 +43,7 @@
                                     <img src="/images/produtos/<%= produtos[id].img %>" alt="">
                                 </div>
                                 <div class="main-img">
-                                    <img width="40%" src="/images/produtos/<%= produtos[id].img %>" alt="">
+                                    <img src="/images/produtos/<%= produtos[id].img %>" alt="">
                                 </div>
                                 <div class="nome-valor-comprar">
                                     <div class="nome-produto">
